# LDKpark

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/pygame-dinosaur/: SKILL.md
assets/dinosaur/: README.md  manifest.json
assets/dinosaur/sfx/: taff-begining.track-0.m4a
scripts/: convert_audio.sh  gif_to_frames.py  select_frames.py
src/LDKpark/: __init__.py
src/LDKpark/games100/: __init__.py  dinosaur.py  flappybird.py  minesweeper.py  runner.py  shooter.py  tetris.py
tests/: testcore.py
