[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LDKpark"
version = "1.2.0"
authors = [
    {name = "LDK", email = "bluejam001@163.com"},
]
description = "A small and fun package"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


dependencies = [
    "requests>=2.20",
    "pygame"
]

[project.optional-dependencies]
dev = ["pytest", "twine", "build"]


[project.scripts]
mytool = "LDKpark.core:main_cli"

